k8s/flights-postgres.yaml
#https://leftasexercise.com/2019/06/10/stateful-sets-with-kubernetes/
apiVersion: v1
kind: Service
metadata:
  name: postgres0
spec:
  selector:
    app: postgres0
  ports:
    - name: tcp
      protocol: TCP
      port: 5433
---
apiVersion: v1
kind: Service
metadata:
  name: postgres0-pgbouncer-t
spec:
  selector:
    app: postgres0
  ports:
    - name: tcp
      protocol: TCP
      port: 6432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres0-pgbouncer-s
spec:
  selector:
    app: postgres0
  ports:
    - name: tcp
      protocol: TCP
      port: 7432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres0-odyssey-t
spec:
  selector:
    app: postgres0
  ports:
    - name: tcp
      protocol: TCP
      port: 8432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres0
spec:
  selector:
    matchLabels:
      app: postgres0
  template:
    metadata:
      labels:
        app: postgres0
    spec:
      containers:
# POSTGRESQL DB
        - name: postgres0
#          image: dimarudik/postgres:latest
          image: dimarudik/flights:latest
#          args: [ "-c", "shared_buffers=2GB", "-c", "max_wal_size=2GB", ]
#          args: ["-c", "log_min_duration_statement=0", "-c", "log_statement=all", "-c", "shared_preload_libraries=pg_stat_statements,pg_show_plans,plugin_debugger,plpgsql_check,pg_hint_plan", "-c", "search_path=bookings,public"]
          args: ["-c", "cluster_name=main", "-c", "password_encryption=md5", "-c", "wal_level=logical", "-c", "log_directory=pg_log", "-c", "log_filename=%u_%a.log", "-c", "logging_collector=on", "-c", "wal_log_hints=on"]
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 5432
          volumeMounts:
            - name: main
              mountPath: /var/lib/postgresql/data
            - name: postgres0
              mountPath: /var/lib/postgresql/postgres0
            - name: postgres1
              mountPath: /var/lib/postgresql/postgres1
        - name: postgres0-pgbouncer-t
          image: bitnami/pgbouncer:latest
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 6432
        - name: postgres0-pgbouncer-s
          image: bitnami/pgbouncer:latest
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 7432
        - name: postgres0-odyssey-t
          image: dimarudik/odyssey:latest
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 8432
      volumes:
        - name: main
          hostPath:
            path: /data/main
        - name: postgres0
          hostPath:
            path: /data/postgres0
        - name: postgres1
          hostPath:
            path: /data/postgres1
---
###################################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: postgres1
spec:
  selector:
    app: postgres1
  ports:
    - name: tcp
      protocol: TCP
      port: 5433
---
apiVersion: v1
kind: Service
metadata:
  name: postgres1-pgbouncer-t
spec:
  selector:
    app: postgres1
  ports:
    - name: tcp
      protocol: TCP
      port: 6432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres1-pgbouncer-s
spec:
  selector:
    app: postgres1
  ports:
    - name: tcp
      protocol: TCP
      port: 7432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres1-odyssey-t
spec:
  selector:
    app: postgres1
  ports:
    - name: tcp
      protocol: TCP
      port: 8432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres1
spec:
  selector:
    matchLabels:
      app: postgres1
  template:
    metadata:
      labels:
        app: postgres1
    spec:
      containers:
        # POSTGRESQL DB
        - name: postgres1
          #          image: dimarudik/postgres:latest
          image: dimarudik/flights:latest
          #          args: [ "-c", "shared_buffers=2GB", "-c", "max_wal_size=2GB", ]
          #          args: ["-c", "log_min_duration_statement=0", "-c", "log_statement=all", "-c", "shared_preload_libraries=pg_stat_statements,pg_show_plans,plugin_debugger,plpgsql_check,pg_hint_plan", "-c", "search_path=bookings,public"]
          args: ["-c", "cluster_name=main", "-c", "password_encryption=md5", "-c", "wal_level=logical", "-c", "log_directory=pg_log", "-c", "log_filename=%u_%a.log", "-c", "logging_collector=on", "-c", "wal_log_hints=on"]
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 5432
          volumeMounts:
            - name: main
              mountPath: /var/lib/postgresql/data
            - name: postgres0
              mountPath: /var/lib/postgresql/postgres0
            - name: postgres1
              mountPath: /var/lib/postgresql/postgres1
        - name: postgres1-pgbouncer-t
          image: bitnami/pgbouncer:latest
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 6432
        - name: postgres1-pgbouncer-s
          image: bitnami/pgbouncer:latest
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 7432
        - name: postgres1-odyssey-t
          image: dimarudik/odyssey:latest
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 8432
      volumes:
        - name: main
          hostPath:
            path: /data/main
        - name: postgres0
          hostPath:
            path: /data/postgres0
        - name: postgres1
          hostPath:
            path: /data/postgres1
---

#  select pg_create_physical_replication_slot('replica');
#  alter system set synchronous_standby_names = 'replica';
#  pg_basebackup --pgdata=/var/lib/postgresql/postgres1 -R --slot=replica
#  echo "port = 5433" >> /var/lib/postgresql/postgres1/postgresql.conf
#  echo "cluster_name = 'replica'" >> /var/lib/postgresql/postgres1/postgresql.conf
#  pg_ctl start -D /var/lib/postgresql/postgres1 -o "--max_connections=100" -l logfile
#  SELECT * FROM pg_stat_replication \gx
#  psql -p 5433
#  SELECT pg_is_in_recovery();
#  select * from pg_replication_slots;
#  select pg_reload_conf();
#  pg_basebackup --pgdata=/var/lib/postgresql/postgres1
#  export PGPORT=5433
#
#  pg_basebackup --pgdata=/var/lib/postgresql/postgres0
#  echo "port = 5434" >> /var/lib/postgresql/postgres0/postgresql.conf
#  echo "log_directory='pg_log'" >> /var/lib/postgresql/postgres0/postgresql.conf
#  echo "log_filename='%u_%a.log'" >> /var/lib/postgresql/postgres0/postgresql.conf
#  echo "logging_collector=on"  >> /var/lib/postgresql/postgres0/postgresql.conf
#  pg_ctl start -D /var/lib/postgresql/postgres0 -o "--max_connections=100" -l logfile
#  psql -p 5434
#  select pg_create_physical_replication_slot('replica');
#  alter system set synchronous_standby_names = 'replica';
#  pg_basebackup --pgdata=/var/lib/postgresql/postgres1 -p 5434 -R --slot=replica
#  echo "log_directory='pg_log'" >> /var/lib/postgresql/postgres1/postgresql.conf
#  echo "log_filename='%u_%a.log'" >> /var/lib/postgresql/postgres1/postgresql.conf
#  echo "logging_collector=on"  >> /var/lib/postgresql/postgres1/postgresql.conf
#  echo "port = 5433" >> /var/lib/postgresql/postgres1/postgresql.conf
#  echo "cluster_name = 'replica'" >> /var/lib/postgresql/postgres1/postgresql.conf
#  pg_ctl start -D /var/lib/postgresql/postgres1 -o "--max_connections=100" -l logfile
