k8s/postgres-flights.yaml
apiVersion: v1
kind: Service
metadata:
  name: flights-db-service
spec:
  selector:
    app: flights-db
  ports:
    - name: tcp
      protocol: TCP
      port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flights-db
spec:
  selector:
    matchLabels:
      app: flights-db
  template:
    metadata:
      labels:
        app: flights-db
    spec:
      containers:
        - name: flights-db
          image: dimarudik/flights:latest
          args: ["-c", "wal_level=logical", "-c", "search_path=bookings,public", "-c", "log_statement=all", "-c", "logging_collector=on"]
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 5432
