k8s/postgres-shard01.yaml
apiVersion: v1
kind: Service
metadata:
  name: shard01-db-service
spec:
  selector:
    app: shard01-db
  ports:
    - name: tcp
      protocol: TCP
      port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shard01-db
spec:
  selector:
    matchLabels:
      app: shard01-db
  template:
    metadata:
      labels:
        app: shard01-db
    spec:
      containers:
        - name: shard01-db
          image: dimarudik/postgres:latest
          args: ["-c", "wal_level=logical"]
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 5432
