k8s/ingress-istio.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ingressclass-istio
spec:
  controller: istio.io/ingress-controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-istio
#  annotations:
#    kubernetes.io/ingress.class: istio
spec:
  ingressClassName: ingressclass-istio
  rules:
    - host: pg.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: shard01-app-service
                port:
                  number: 80
